syntax = "proto3";

import "models/user_dto.proto";
import "models/user_with_roles.proto";

option csharp_namespace = "Shared.Grpc.Messages";

package car_service;

// Definicje wiadomości dla logowania
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string token = 2;
  string message = 3;
  UserDto user = 4;
}

// Definicje wiadomości dla rejestracji
message RegisterRequest {
  string email = 1;
  string password = 2;
  string firstName = 3;
  string lastName = 4;
}

message RegisterResponse {
  bool success = 1;
  string userId = 2;
  string message = 3;
}

// Definicje wiadomości dla weryfikacji użytkownika
message VerifyUserRequest {
  string token = 1;
}

message VerifyUserResponse {
  bool isValid = 1;
  string message = 2;
  UserDto user = 3;
}

message VerifyActionRequest {
  string token = 1;
  string action = 2;
}

message VerifyActionResponse {
  bool allowed = 1;
  string message = 2;
}

message GetUsersWithRolesRequest {
  string token = 1;
}

message GetUsersWithRolesResponse {
   repeated UserWithRoles users_with_roles = 1;
}

message AddRoleRequest {
  string token = 1;
  string user_id = 2;
  string role_id = 3;
}

message AddRoleResponse {
  bool success = 1;
  string message = 2;
}

message RemoveRoleRequest {
  string token = 1;
  string user_id = 2;
  string role_id = 3;
}

message RemoveRoleResponse {
  bool success = 1;
  string message = 2;
}